import { BaseDBEntity } from '../index'
import { jsonSchema, JsonSchemaAnyBuilder } from './jsonSchemaBuilder'
import { baseDBEntityJsonSchema, savedDBEntityJsonSchema } from './jsonSchemas'

const s = new JsonSchemaAnyBuilder().$schemaDraft7().set$id('sdf')

interface Address {
  countryCode: string
  zip: string
  city: string
  address1: string
  address2?: string
  region?: string
  phone?: string
}

// interface AddressBM extends Address, BaseDBEntity {}
// interface AddressDBM extends Address, SavedDBEntity {}

const addressJsonSchema = jsonSchema.object<Address>({
  countryCode: jsonSchema.string().countryCode(),
  zip: jsonSchema.string().length(1, 40),
  city: jsonSchema.string(),
  address1: jsonSchema.string(),
  address2: jsonSchema.string().optional(),
  region: jsonSchema.string().optional(),
  phone: jsonSchema.string().optional(),
})

const addressBMJsonSchema = addressJsonSchema.extend(baseDBEntityJsonSchema)
const addressDBMJsonSchema = addressJsonSchema.extend(savedDBEntityJsonSchema)

// alternative

const addressBMJsonSchema2 = baseDBEntityJsonSchema.extend(addressJsonSchema)
const addressDBMJsonSchema2 = savedDBEntityJsonSchema.extend(addressJsonSchema)

// alternative 2
const addressBMJsonSchema3 = addressJsonSchema.extend(
  jsonSchema.object<BaseDBEntity>({
    id: jsonSchema.string().optional(),
    created: jsonSchema.unixTimestamp().optional(),
    updated: jsonSchema.unixTimestamp().optional(),
  }),
)

test('b2', () => {
  console.log(JSON.stringify(s, null, 2))
})

test('simpleStringSchema', () => {
  const s = jsonSchema.string().build()

  expect(s).toMatchInlineSnapshot(`
Object {
  "type": "string",
}
`)
})

test('addressSchema', () => {
  expect(addressJsonSchema.build()).toMatchSnapshot()
})

test('addressBMJsonSchema', () => {
  expect(addressBMJsonSchema.build()).toMatchSnapshot()
  expect(addressBMJsonSchema2.build()).toEqual(addressBMJsonSchema.build())
  expect(addressBMJsonSchema3.build()).toEqual(addressBMJsonSchema.build())
})

test('addressDBMJsonSchema', () => {
  addressDBMJsonSchema.required.sort()
  addressDBMJsonSchema2.required.sort()

  expect(addressDBMJsonSchema.build()).toMatchSnapshot()
  expect(addressDBMJsonSchema2.build()).toEqual(addressDBMJsonSchema.build())
})
